--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   shared_preferences: ^2.2.2
   image_picker: ^1.1.2
   provider: ^6.1.2
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
